<resources>
    <string name="app_name">Aomai123</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! Singto Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! aomai123 Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="Add_to_cart_button">Add me to Cart</string>
    <string name="Thai_Baht_sign">‎‎฿</string>
    <string name="checkout">Check out</string>
    <string name="Num_is_zero">Please select number</string>
    <string name="Eat_at_12">For lunch,will be delivered around 12:00.</string>
    <string name="Eat_at_3pm">For afternoon break, will be delivered around 15:00.</string>
    <string name="Pay_at_delivery">Cash on delivery</string>
    <string name="use_balance">Use Balance</string>
    <string name="select_time">Select delivery time:</string>
    <string name="select_payment">Select payment mode:</string>
    <string name="item_num">Item(s):</string>
    <string name="totalAmount">Total:</string>
    <string name="cash_and_balance">Balance + cash</string>
    <string name="multiply_sign">X</string>
    <string name="name_place_holder">Name:</string>
    <string name="Balance_text">Balance:</string>
    <string name="Creidt_text">Points</string>
    <string name="Points_text">Points:</string>
    <string name="welcom_text">Welcom</string>
    <string name="goToRegister">Go to Register</string>
    <string name="goToLogin">Go to Login</string>
    <string name="title_activity_log_in">logIn</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_register">register</string>
    <string name="hint_fname">Firstname</string>
    <string name="hint_lname">Last name</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Go to Login</string>
    <string name="btn_link_to_store">go back to store</string>
    <string name="registering">Registering............</string>
    <string name="logOut">Logout</string>
    <string name="topupBalance">Top up</string>
    <string name="goToEditAddress">Edit your address</string>
    <string name="title_activity_edit_address">editAddress</string>
    <string name="building">Select office building</string>
    <string name="floor">Which floor?</string>
    <string name="roomNumber">Your room number?</string>
    <string name="companyName">Company name(optional)</string>
    <string name="phone">your phone number(optional)</string>
    <string name="SubmitAddress">Confirm Address</string>
    <string name="hint_select_buildings">Which is your office building?</string>
    <string name="hint_select_floor">Choose your floor</string>
    <string name="cancel_SubmitAddress">Go Back</string>
    <string name="please_login">Please login first</string>
    <string name="nothingIntheCart">Hi, there is nothing in shopping Cart.</string>
    <string name="redeemPoints">Redeem points</string>
    <string name="timeout_error">Please check your internet connection.</string>
    <string name="title_activity_top_up">topUp</string>
    <string name="notlogintyet">Please login first.</string>
    <string name="notOrderFound">Can not find orders.</string>
    <string name="lateOrder">Too late for today, Deliver tomorrow?</string>
    <string name="Total">Total :</string>
    <string name="Doyouwanttocancel">Do you want to cancel this order?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="SubmitCancelation">Submitting your Cancellation request...</string>
    <string name="Addedtocart">Added to your Cart.</string>
    <string name="Pleaselogin">Please login first.</string>
    <string name="Addressupdated">Address successfully updated!</string>
    <string name="PleaseInputAddress">Please input your address details.</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="ConfirmToProceed">Confirm to proceed</string>
    <string name="BalanceNotEnough">Your balance is not enough.</string>
    <string name="BalanceIsZero">Your balance is zero.</string>
    <string name="PointNotEnough">Your point is not enough.</string>
    <string name="FillAddressFirst">Please go to fill address first</string>
    <string name="OrderSubmitted">Order submitted.</string>
    <string name="EnterCredential">Please enter the credentials.</string>
    <string name="InvalidEmail"> does not look like a email address.</string>
    <string name="InputDetail">Please enter your details!</string>
    <string name="RegisterSuccess">User successfully registered. Try login now!</string>
    <string name="GoBack">Go Back</string>
    <string name="UploadPic">Upload Picture</string>
    <string name="ChoosePic">Choose transfer receipt</string>
    <string name="meSignOut">Sign Out</string>
    <string name="meHistory">History</string>
    <string name="meAddress">Address</string>
    <string name="meOrder">Order</string>
    <string name="meTopUp">Top Up</string>
    <string name="meRefresh">Refresh</string>
</resources>
